<resources>
    <string name="app_name" translatable="false">Pixel Launcher Enhancer Lite</string>
    <string name="app_name_shortened" translatable="false">PLE Lite</string>
    <string name="app_motto">A trimmed-down build of Pixel Launcher Enhanced</string>

    <string name="icon">Icon</string>
    <string name="more">More</string>
    <string name="exit">Exit</string>
    <string name="attention">Attention</string>
    <string name="opt_default">(Default)</string>
    <string name="opt_selected2" translatable="false">%1$s%2$s</string>
    <string name="opt_selected3" translatable="false">%1$s%2$s %3$s</string>
    <string name="understood">Understood</string>
    <string name="root_connection_failed_title">Root connection failed</string>
    <string name="root_connection_failed_desc">Unable to connect to root service. Please grant root access and try again.</string>
    <string name="lsposed_warn">Enable this module from LSPosed and force close launcher.</string>
    <string name="lsposed_bootloop_warn">One of the features you enabled is not compatible with this version of launcher. Please disable it and force close launcher.</string>
    <string name="xposed_module_disabled_title">Module not activated</string>
    <string name="xposed_module_disabled_desc">System service not running</string>
    <string name="xposed_module_bootlooped_title">Bootloop detected</string>
    <string name="xposed_module_bootlooped_desc">Module has been disabled</string>
    <string name="force_close_launcher">Force close launcher</string>

    <string name="version_codes" translatable="false">%s (#%d)</string>
    <string name="github_fork_repo">Fork repository</string>
    <string name="github_upstream_repo">Upstream repository</string>
    <string name="dev_name" translatable="false">DrDisagree</string>
    <string name="dev_bio">Original Developer</string>
    <string name="fork_maintainer_name" translatable="false">hxreborn</string>
    <string name="fork_maintainer_bio">Fork Maintainer</string>
    <string name="fork_subtitle">Based on Pixel Launcher Enhanced v1.0.3</string>

    <string name="fragment_icons_title">Icons</string>
    <string name="fragment_icons_desc">Manage icon badges and labels</string>
    <string name="fragment_home_screen_title">Home screen</string>
    <string name="fragment_home_screen_desc">Layout, gestures and search bar</string>
    <string name="fragment_miscellaneous_title">Miscellaneous</string>
    <string name="fragment_miscellaneous_desc">Other useful options</string>
    <string name="fragment_about_title">About</string>
    <string name="fragment_about_desc">About this application</string>

    <string name="remove_shortcut_badge_title">Remove shortcut icon badge</string>
    <string name="desktop_icon_labels_title">Icon labels on desktop</string>
    <string name="app_drawer_icon_labels_title">Icon labels in app drawer</string>
    <string name="double_tap_to_sleep_title">Double tap to sleep</string>
    <string name="double_tap_to_sleep_desc">Double tap on home screen empty space to turn off the screen. Pixel Launcher needs root access</string>
    <string name="hide_at_a_glance_title">Hide At A Glance</string>
    <string name="hide_at_a_glance_desc">Hide at a glance from home screen</string>
    <string name="hide_desktop_search_bar_title">Hide desktop search bar</string>
    <string name="hide_desktop_search_bar_desc">Hide search bar from desktop dock</string>
    <string name="restart_launcher_title">Restart</string>
    <string name="restart_launcher_desc">Restart the launcher manually to apply any pending settings</string>
    <string name="restarting_launcher">Restarting launcher…</string>
    <string name="developer_options_title">Developer options</string>
    <string name="developer_options_desc">Enable hidden developer options</string>
    <string name="entry_in_launcher_settings">Show entry in launcher settings</string>
    <string name="entry_in_homescreen_popup">Show entry in homescreen popup</string>
    <string name="hide_gesture_pill_title">Hide gesture indicator</string>
    <string name="hide_gesture_pill_desc">May not work on older android versions</string>
    <string name="navigation_space_height_title">Navigation bar spacing</string>
    <string name="lock_layout_title">Lock layout</string>
    <string name="lock_layout_desc_on">Icons and widgets can\'t be added, removed and moved on the homescreen</string>
    <string name="lock_layout_desc_off">Icons and widgets can be added, removed and moved on the homescreen</string>
    <string name="layout_is_locked">Layout is locked!</string>
    <string name="section_general_title">General</string>
    <string name="section_search_bar_title">Search bar</string>
    <string name="section_quickspace_title">Quickspace</string>
    <string name="value_output">Value: %s</string>

</resources>
