<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceCategory
        android:key="xposed_home_screen_general"
        android:title="@string/section_general_title"
        app:iconSpaceReserved="false">

        <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
            android:key="xposed_locklayout"
            android:summaryOff="@string/lock_layout_desc_off"
            android:summaryOn="@string/lock_layout_desc_on"
            android:title="@string/lock_layout_title"
            app:iconSpaceReserved="false" />

        <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
            android:key="xposed_doubletaptosleep"
            android:summary="@string/double_tap_to_sleep_desc"
            android:title="@string/double_tap_to_sleep_title"
            app:iconSpaceReserved="false" />

    </com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceCategory>

    <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceCategory
        android:key="xposed_home_screen_searchbar"
        android:title="@string/section_search_bar_title"
        app:iconSpaceReserved="false">

        <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
            android:key="xposed_desktopsearchbar"
            android:summary="@string/hide_desktop_search_bar_desc"
            android:title="@string/hide_desktop_search_bar_title"
            app:iconSpaceReserved="false" />

    </com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceCategory>

</PreferenceScreen>
